@@ -1,0 +1,98 @@
+{
+    "ehi_mod_title" : "ข้อมูลเพื่มเติมในแต่ละด่านที่เจ๋งที่สุด",
+    "ehi_mod_desc" : "Extra Heist Info(EHI): คลิกเพื่อปรับเปลี่ยนตัวเลือก",
+
+    "ehi_preview" : "พรีวิว (จำเป็นต้องรีสตาร์ทด่านเพื่อให้เกิดผลลัพธ์)\nขีดสีแดงตรงมุมซ้ายสุดของไอคอนติดตามแรกสุดที่กำลังจะเกิดเหตุการณ์ขึ้น",
+
+    "ehi_x_offset" : "ตำแหน่งแกน X",
+    "ehi_x_offset_desc" : "ปรับตำแหน่งไอคอนติดตามในแนวนอน",
+    "ehi_y_offset" : "ตำแหน่งแกน Y",
+    "ehi_y_offset_desc" : "ปรับตำแหน่งไอคอนติดตามในแนวตั้ง",
+
+    "ehi_scale" : "ขนาด",
+    "ehi_scale_desc" : "ปรับขนาดของไอคอนติดตาม\nยิ่งตัวเลขค่ามากขึ้นเเพียงใด ขนาดไอคอนติดตามยิ่งใหญ่ขึ้นเท่านั้น ฯลฯ",
+
+    "ehi_vr_scale": "ขนาดในโหมด VR",
+    "ehi_vr_scale_desc": "ปรับขนาดของไอคอนติดตามในโหมด VR\nยิ่งตัวเลขค่ามากขึ้นเเพียงใด ขนาดไอคอนติดตามยิ่งใหญ่ขึ้นเท่านั้น ฯลฯ",
+
+    "ehi_time_format" : "รูปแบบเวลา",
+    "ehi_time_format_desc" : "กำหนดรูปแบบเวลาของไอคอนติดตามว่าควรมีลักษณะเป็นอย่างไร",
+    "ehi_time_format_1" : "แสดงหน่วยเป็นวินาทีเท่านั้น",
+    "ehi_time_format_2" : "แสดงหน่วยเป็นนาทีและวินาที",
+
+    "ehi_trackers" : "ไอคอนติดตาม",
+    "ehi_trackers_desc" : "Trackers หรือ ไอตอนแสดงการติดตามเหตุการณ์ที่เกิดขึ้นอยู่หรือกำลังเกิดขึ้นในด่านนั้นๆ",
+
+    "ehi_show_achievement" : "แสดงไอคอนติดตามรางวัลความสำเร็จ",
+    "ehi_show_achievement_desc" : "Show achievement tracker เป็นการแสดงไอคอนติดตามรางวัลความสำเร็จที่เกี่ยวข้องกับเวลาหรือจำนวนในแต่ละด่าน\nบางด่านอาจไม่มีไอคอนติดตามรางวัลความสำเร็จปรากฎให้เห็น",
+
+    "ehi_show_gained_xp" : "แสดงค่าประสบการณ์ที่ได้รับ",
+    "ehi_show_gained_xp_desc" : "Show gained XP แสดงค่าประสบการณ์ที่ได้รับในด่านที่กำลังเล่นอยู่\nไอคอนติดตามจะถูกปิดการแสดงผลอัตโนมัติหากโหมดที่เลือก คือ Crime Spree",
+
+    "ehi_xp_format" : "เลือกรูปแบบการแสดงผลค่าประสบการณ์ที่ได้รับ",
+    "ehi_xp_format_desc" : "ตัวอย่าง: ค่าประสบการณ์เริ่มต้น: 1000; ความยากระดับ Death Wish\nค่าประสบการณ์เริ่มต้นเพีบงแค่: 1000\nค่าประสบการณ์คูณด้วยระดับความยากที่เลือก: 13000\nค่าประสบการณ์คูณด้วยค่าประสบการณ์เพิ่มเติมที่ได้รับจากในด่านที่เลือก: 13000+",
+    "ehi_xp_format_base" : "แสดงค่าประสบการณ์เริ่มต้นเท่านั้น",
+    "ehi_xp_format_difficulty_multiplier" : "แสดงค่าประสบการณ์คูณด้วยระดับความยาก",
+    "ehi_xp_format_all_bonuses" : "แสดงค่าประสบการณ์คูณด้วยค่าประสบการณ์เพิ่มเติมที่ได้รับ",
+
+    "ehi_xp_panel" : "เลือกวิธีการแสดงค่าประสบการณ์ที่ได้รับ",
+    "ehi_xp_panel_desc" : "",
+    "ehi_xp_panel_1" : "แสดงค่าประสบการณ์ที่ได้รับแยกกันในแต่ละไอคอนติดตาม",
+    "ehi_xp_panel_2" : "แสดงค่าประสบการณ์ทั้งหมดที่ได้รับจากด่านนั้นๆ",
+
+    "ehi_show_trade_delay" : "แสดงไอคอนติดตามความล่าช้าของการแลกเปลี่ยนตัวประกัน",
+    "ehi_show_trade_delay_desc" : "แสดงไอคอนติดตามเวลา ความล่าช้าของการแลกเปลี่ยนตัวประกันเมื่อคุณหรือเพื่อนของคุณฆ่าพลเรือน\nเวลาเริ่มต้นในครั้งแรกคือ 5วินาที หากสังหารพลเรือน 1 คน เวลาถูกบวกเพิ่มทีละ 30วินาที",
+
+    "ehi_show_trade_delay_option" : "เมื่อไหร่ที่จะแสดงความล่าช้าของการแลกเปลี่ยนตัวประกัน",
+    "ehi_show_trade_delay_option_desc": "แสดงตลอดเวลา: แสดงไอคอนการติดตามนี้ทันทีเมื่อคุณหรือเพื่อนของคุณฆ่าพลเรือน\nเมื่อถูกควบคุมตัวหรือ In Custody: แสดงไอคอนติดตามนี้เมื่อคุณหรือเพื่อนของคุณถูกควบคุมตัวและได้ทำการฆ่าพลเรือนไปอย่างน้อย 1 คน",
+    "ehi_show_trade_delay_option_1" : "แสดงตลอด",
+    "ehi_show_trade_delay_option_2" : "แสดงเมื่อถูกควบคุมตัว",
+
+    "ehi_show_trade_delay_other_players_only": "แสดงไอคอนติดตามความล่าช้าของการแลกเปลี่ยนตัวประกันสำหรับผู้เล่นอื่นเท่านั้น",
+    "ehi_show_trade_delay_other_players_only_desc": "เมื่อเลือกตัวเลือกนี้ ไอคอนติดตามนี้จะไม่แสดงค่าของคุณว่าคุณฆ่าพลเรือนไปกี่คน แต่จะแสดงค่าของคนอื่นตามปรกติ",
+
+    "ehi_show_timers" : "แสดงไอคอนติดตามเกี่ยวกับเวลา",
+    "ehi_show_timers_desc" : "แสดงไอคอนติดตามเกี่ยวกับเวลา เช่น การแฮคระบบ, สว่าน, เลื่อย ฯลฯ",
+
+    "ehi_show_zipline_timer" : "แสดงไอคอนติดตามการใช้โหนสลิง",
+    "ehi_show_zipline_timer_desc" : "แสดงค่า 2 ไอคอนติดตามที่เกี่ยวข้องกับการใช้โหนสลิงหรือ Zipline\nไอคอนบรรทัดแรกแสดงเวลาที่ไอเท็มจะไปถึงผู้เล่นหรือตำแหน่งที่ปลายทาง, ไอคอนบรรทัดที่สองแสดงเวลาที่รอกจะกลับมาที่ตำแหน่งเริ่มต้นอีกครั้ง",
+
+    "ehi_show_gage_tracker" : "แสดงไอคอนติดตาม Gage Packages",
+    "ehi_show_gage_tracker_desc" : "แสดงไอคอนติดตามจำนวน Gage Packagesที่มีในด่านนั้นๆ\nหากด่านนั้นไม่อนุญาตให้มี Gage Packages ปรากฎในด่าน ไอคอนติดตามนี้จะไม่แสดงค่าให้เห็น",
+
+    "ehi_show_captain_damage_reduction" : "แสดงไอคอนการลดความเสียหาย",
+    "ehi_show_captain_damage_reduction_desc" : "แสดงไอคอนค่าการลดความเสียหายเมื่อกัปตันปรากฏตัวขึ้นในด่านนั้นๆ",
+
+    "ehi_show_equipment_tracker" : "แสดงไอคอนอุปกรณ์",
+    "ehi_show_equipment_tracker_desc" : "ไอคอนแสดงค่าอุปกรณ์ที่ปรากฎอยู่บนด่านหรือจากผู้เล่น เช่น กระเป๋าแพทย์, กระเป๋ากระสุน, กระเป๋าอาวุธขว้างปา, กระเป๋าใส่ศพ และกล่องปฐมพยาบาล",
+
+    "ehi_equipment_menu" : "เมนูอุปกรณ์",
+    "ehi_equipment_menu_desc" : "",
+
+    "ehi_show_equipment_doctorbag" : "แสดงกระเป๋าแพทย์",
+    "ehi_show_equipment_doctorbag_desc" : "แสดงจำนวนครั้งทั้งหมดจากกระเป๋าแพทย์",
+
+    "ehi_show_equipment_ammobag" : "แสดงกระเป๋ากระสุน",
+    "ehi_show_equipment_ammobag_desc" : "แสดงจำนวนกระเป๋ากระสุน",
+
+    "ehi_show_equipment_grenadecases" : "แสดงกระเป๋าอาวุธขว้างปา ",
+    "ehi_show_equipment_grenadecases_desc" : "แสดงจำนวนอาวุธขว้างปาจากกระเป๋าอาวุธขว้างปา ",
+
+    "ehi_show_equipment_bodybags": "แสดงกระเป๋าใส่ศพ",
+    "ehi_show_equipment_bodybags_desc": "แสดงจำนวนกระเป๋าใส่ศพ\nไอคอนติดตามนี้จะไม่แสดงค่าหากด่านเปลี่ยนจากลอบเร้นเป็นบู๊ล้างผลาญ",
+
+    "ehi_show_equipment_firstaidkit": "แสดงกล่องปฐมพยาบาล",
+    "ehi_show_equipment_firstaidkit_desc": "แสดงจำนวนกล่องปฐมพยาบาล",
+
+    "ehi_show_equipment_aggregate_health" : "แสดงผลกระเป๋าแพทย์และกล่องปฐมพยาบาลรวมกัน",
+    "ehi_show_equipment_aggregate_health_desc" : "แสดงผลกระเป๋าแพทย์และกล่องปฐมพยาบาลรวมกันให้ปรากฎอยู่ในไอคอนติดตามเดียวกัน",
+
+    "ehi_show_minion_tracker" : "แสดงไอคอนจำนวนพันธมิตร",
+    "ehi_show_minion_tracker_desc" : "แสดงไอคอนจำนวนพันธมิตรที่เปลี่ยนมาอยู่ฝั่งเราในด่านนั้นๆ",
+
+    "ehi_show_difficulty_tracker" : "แสดงไอคอนความยาก",
+    "ehi_show_difficulty_tracker_desc" : "แสดงไอคอนความยากของการจู่โจมในแต่ละรอบ มีค่าเป็นเปอร์เซ็นต์",
+
+    "ehi_show_pager_tracker" : "แสดงไอคอนจำนวนวิทยุเรียกตัว",
+    "ehi_show_pager_tracker_desc" : "แสดงไอคอนจำนวนวิทยุเรียกตัวหรือ pager ที่เหลืออยู่"
+}
